// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Scene /> can render 1`] = `
<div
  className="scene"
>
  <div
    className="scene__background scene__background--top"
  />
  <div
    className="scene__background scene__background--bottom"
  />
  <img
    alt=""
    className="scene__brand"
    src="network-canvas-brand.svg"
  />
  <div
    className="scene__home"
    onClick={[Function]}
  >
    <Icon
      className="start-button__arrow"
      color=""
      name="back-arrow"
      style={Object {}}
    />
  </div>
  <AnimatePresence />
  <n
    applyTransformOrigin={true}
    element="div"
    flipKey="foo"
    retainTransform={false}
  >
    <div
      className="scene__start"
    >
      <Connect(Start)
        show={true}
      />
    </div>
    <div
      className="scene__recent-protocols"
    >
      <Connect(RecentProtocols)
        show={true}
      />
    </div>
    <div
      className="scene__protocol"
    >
      <Connect(Overview)
        flipId="%2Ffoo%2Fbar"
        show={false}
      />
      <div
        className="scene__timeline"
      >
        <withRouter(withStateHandlers(defaultProps(Connect(sortableList(Timeline)))))
          show={false}
        />
      </div>
      <Connect(ProtocolControlBar)
        show={false}
      />
    </div>
  </n>
  <Connect(Screens) />
</div>
`;

exports[`<Scene /> shows protocol when there is one 1`] = `
<div
  className="scene scene--protocol"
>
  <div
    className="scene__background scene__background--top"
  />
  <div
    className="scene__background scene__background--bottom"
  />
  <img
    alt=""
    className="scene__brand"
    src="network-canvas-brand.svg"
  />
  <div
    className="scene__home"
    onClick={[Function]}
  >
    <Icon
      className="start-button__arrow"
      color=""
      name="back-arrow"
      style={Object {}}
    />
  </div>
  <AnimatePresence />
  <n
    applyTransformOrigin={true}
    element="div"
    flipKey="foo"
    retainTransform={false}
  >
    <div
      className="scene__start"
    >
      <Connect(Start)
        show={false}
      />
    </div>
    <div
      className="scene__recent-protocols"
    >
      <Connect(RecentProtocols)
        show={false}
      />
    </div>
    <div
      className="scene__protocol"
    >
      <Connect(Overview)
        flipId="%2Ffoo%2Fbar"
        show={true}
      />
      <div
        className="scene__timeline"
      >
        <withRouter(withStateHandlers(defaultProps(Connect(sortableList(Timeline)))))
          show={true}
        />
      </div>
      <Connect(ProtocolControlBar)
        show={true}
      />
    </div>
  </n>
  <Connect(Screens) />
</div>
`;
